--- a/Documents/projektisuunnitelma/versio.tex
+++ b/Documents/projektisuunnitelma/versio.tex
@@ -1,2 +1,3 @@
-0.0 & 21.6.2005 & Sommervillen mukainen runko \\
-0.1 & 31.8.2006 & Lisätty luvut 6-8
+0.1 & 18.9.2006 & Ensimmäinen versio \\
+1.0 & 2.10.2006 & Ensimmäinen valmis versio
+1.1 & 16.10.2006 & Muutettua riskejä ja lisätty LOC
