--- a/Documents/suunnitteludokumentti/versio.tex
+++ b/Documents/suunnitteludokumentti/versio.tex
@@ -1,1 +1,2 @@
-1.0 & 21.1.2004 & Ensimmäinen versio \\
+1.0 & 12.10.2006 & Ensimmäinen versio \\
+1.1 & 19.10.2006 & Pikkuvirheitä ja sanamuotoja korjattu\\
