--- a/Documents/suunnitteludokumentti/classes.tex
+++ b/Documents/suunnitteludokumentti/classes.tex
@@ -4,7 +4,7 @@ public abstract class Criterion
 {\bf Base class for all criterion types. The many different types of criteria in TitoTrainer
 are all used via the interface defined here. The analyzer component does not know the
 details of different Criterion sub-classes. Only the composer used for creating and
-modiying Tasks is even aware that differnt types of criteria exist.}\\
+modiying Tasks is aware that differnt types of criteria exist.}\\
 
 {\tt 	public String getPositiveFeedback(TitoState studentAnswer)} \\
 Return the positive feedback string of this Criterion. Criterion types that also
@@ -84,7 +84,7 @@ Return all tasks\\
 Return task identified by taskID\\
 
 {\tt		public Criterion[] getCriteria(Task task)}\\
-Return the criteria of Task task\\
+Return the criteria of task\\
 	
 {\tt 		public void createTask(Task task, Criterion[] criteria)} \\
 Add new task to task database. The insert will affect all courses. This operation
@@ -92,14 +92,14 @@ will also create the criteria for the task\\
 	
 {\tt 		public void updateTask(Task task, Criterion[] criteria)} \\
 Update existing task. The update will affect all courses. This operation
-will also update the criteria for the task.\\
+will also update the criteria of the task.\\
 
 {\tt 		public void removeTask(Task task)} \\
 Remove task from task database (and thus all courses). This will also remove all stored
 answers of the task.\\
 
-{\tt 		public User[] getUsers(Course c) throws SQLException} \\
-Return all users who have attempted to solve at least one task of Course c\\
+{\tt 		public User[] getUsers(Course course) throws SQLException} \\
+Return all users who have attempted to solve at least one task of Course\\
 	
 {\tt 		public User getUser(String userID, String password) throws SQLException} \\
 Return user identified by userID\\
@@ -141,7 +141,7 @@ Set the name of this task\\
 Return name of the last person who has modified this task\\
 
 {\tt 		public void setAuthor(String name)} \\
-Set "last task modification by" attribute to Name, set last-modification-timestamp to current data and time\\
+Set "last task modification by" attribute to Name, set last-modification-timestamp to current date and time\\
 
 {\tt		public Date getModificationDate()} \\
 Return the date and time this task was last modified\\
