*** empty log message ***

--- a/Documents/suunnitteludokumentti/classes.tex
+++ b/Documents/suunnitteludokumentti/classes.tex
@@ -6,24 +6,68 @@ are all used via the interface defined here. The analyzer component does not kno
 details of different Criterion sub-classes. Only the composer used for creating and
 modiying Tasks is aware that differnt types of criteria exist.}\\
 
-{\tt 	public String getPositiveFeedback(TitoState studentAnswer)} \\
-Return the positive feedback string of this Criterion. Criterion types that also
-evaluate quality of the answer should overide this method so they can return a 
-different string depending on the quality of the student's answer.\\
+{\tt	protected Criterion(String id, boolean usesSecretInput)}\\
+Constructor to initialize mandatory data members of Criterion.\\
+{\tt@param id} Identifier that can used to distinguish the different criteria of one task\\
+{\tt@param usesSecretInput} true if criterion is to be use in conjunktion to secret input
 
-{\tt 	public String getNegativeFeedback()} \\
-Return the negative feedback string of this Criterion \\
+{\tt	public String getId()}\\
+Return the identifier of this Criterion\\
 
 {\tt 	public boolean isSecretInputCriterion()} \\
- Return true if this criterion is to be used with secret input \\
+Return true if this criterion is to be used with secret input \\
+
+{\tt 	public String getAcceptanceFeedback()} \\
+Return the feedback string used for acceptable solution attempts\\
+
+{\tt 	public String getFailureFeedback()} \\
+Return the feedback string used for failed solution attempts\\
+
+{\tt	public String getHighQualityFeedback()} \\
+Return the feedback string used for high quality solution attempts
+
+{\tt 	public String setAcceptanceFeedback()} \\
+Set the feedback string used for acceptable solution attempts
+
+{\tt 	public String setFailureFeedback()} \\
+Set the feedback string used for failed solution attempts
+
+{\tt	public String setHighQualityFeedback()} \\
+Set the feedback string used for high quality solution attempts
+
+
+
+
+{\tt 	public abstract boolean hasAcceptanceTest(boolean usingModelAnswer)}\\
+Return true if this criterion has test for evaluating failure/success of the
+student's answer. Return of false means this criterion should NOT be used to
+test passesAcceptanceTest(..)
+{\tt@param usingModelAnswer} True if the inspection method for this task is model-answer\\
+
+{\tt	public abstract boolean passesAcceptanceTest(TitoState studentAnswer, TitoState modelAnswer)} \\
+Return true if student's solution meets the passing requirement of this Criterion
+{\tt@param studentAnswer} end state of TitoKone for student's answer
+{\tt@param modelAnswer} end state of TitoKone for teacher's answer, or null
+
+{\tt	public abstract String getAcceptanceTestValue()}\\
+Return the value the student's answer will be compared to
+
+{\tt	public abstract void setAcceptanceTestValue(String test)}\\
+Set the value the student's answer will be compared to
+
+
+
+
+
+
+
+
+
+
+
 
 {\tt 	public String serializeToXML()} \\
 Return a serialized copy of this Criterion in XML-format \\
-		
-{\tt 	public abstract boolean meetsCriterion(TitoState studentAnswer, TitoState modelAnswer);} \\
-Return true if student's answer meets the condition(s) of this criterion. Criterion
-types that also evaluate quality of the answer must return <code>true</code> if the 
-answer fullfills the passing requirement, even if answer was deemed low quality. \\
 
 {\tt 	protected abstract String serializeSubClass();} \\
 Serialize non-static data-members of Criterion sub-class to XML format. The subclass
@@ -57,6 +101,14 @@ Deserialize String value from XML string. Helper function for initSubClass() \\
 	
 {\tt 	protected static int parseXMLInt(String XML, String tagname)} \\
 Deserialize integer value from XML string. Helper function for initSubClass() \\
+
+
+
+
+
+
+
+
 
 
 
@@ -303,7 +355,40 @@ public class TitoState
 
 {\bf Capsulates the end-state of single run of TitoKone.
 
-This class will provide methods for querying the TitoKone end state.
+This class will provide methods for querying the TitoKone end state.}\\
 
-Designed and implemented in 2nd development iteration. }\\
+{\tt		int getRegister(int num)} \\
+Return contents of register Num (0 for "R0", etc)\\
+
+{\tt		int getMemoryLocation(int address)} \\
+Return contents of specified memory address\\
+	
+{\tt		int getSymbolAddress(String symbolName)} \\
+Return memory address of specified symbol\\
+	
+{\tt		String getScreenOutput()} \\
+Return TitoKone output as String in format "1234, 1234, 1234". The returned string may be empty, but it is never null.\\
+
+{\tt		int getStackMaxSize()} \\
+Return maximum stack size reached during program execution\\
+
+{\tt		int getExecutionSteps()} \\
+Return number of executed instructions\\
+	
+{\tt		int getCodeSize()} \\
+Return number of instruction words in the program code\\
+
+{\tt		int getDataSize()} \\
+Return number of words in program's data-area\\
+	
+{\tt		int getMemoryAccessCount()} \\
+Return number memory references made during program run. This number includes references caused by both data and instruction fetches\\
+	
+{\tt		String[] getUsedOpcodes()} \\
+
+
+
+
+
+
 
